fixed li wrapping issue

--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -8,17 +8,12 @@ div.phone_break {
 	  display: none;
     }
 
-div.phone.clear {
-	display: none;
-}
+
 
 	div.small_phone.break {
 		display: none;
 	}
 	
-	div.small_phone.clear {
-		display: none;
-	}
 
 div.content {
 	width: 1200px;	
@@ -146,10 +141,6 @@ div.left_pane div:nth-child(1n + 2) {
     margin-top: 20px;
 }
 
-div.description li {
-	height: 20px;
-}
-
 div.application{
 	text-align: center;
 	height: 29px;
@@ -223,10 +214,6 @@ https://experienceleague.adobe.com/docs/target/using/experiences/vec/mobile-view
 	div.medium.phone_break {
 	  display: none;
     }	
-
-	div.phone.clear {
-		display: inline;
-	}
 	
 	div.main {
 		height: 74em;
@@ -340,10 +327,6 @@ https://experienceleague.adobe.com/docs/target/using/experiences/vec/mobile-view
 	  display: inline;
     }
 	
-	div.medium.small_phone.clear {
-		display: inline;
-	}
-	
 	div.content {
 		max-width: 390px;
 		height: 83em;
@@ -389,10 +372,6 @@ https://experienceleague.adobe.com/docs/target/using/experiences/vec/mobile-view
 	}
 	
 	div.small_phone.break {
-		display: inline;
-	}
-	
-	div.small_phone.clear {
 		display: inline;
 	}
 
@@ -446,10 +425,6 @@ https://experienceleague.adobe.com/docs/target/using/experiences/vec/mobile-view
 	}
 	
 	div.small_phone.break {
-		display: inline;
-	}
-	
-	div.small_phone.clear {
 		display: inline;
 	}
 
